days 3 and 4